--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -481,11 +481,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "神经网络的输入中，特别是RNN模型，常常需要对输入的数据的不同维度进行交换，主要是Batch size 这个维度。  \n",
+    "有两种方式可以处理：\n",
+    "1. `torch.transpose()`\n",
+    "2. `numpy.transpose()`"
+   ]
   },
   {
    "cell_type": "code",
