--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "responsible-beginning",
+   "execution_count": 1,
+   "id": "sensitive-shelf",
    "metadata": {},
    "outputs": [
     {
@@ -12,12 +12,12 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.3.1\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
       "sklearn:     0.23.2\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.1\n",
-      "PyTorch:      1.2.0\n"
+      "plotly:      4.14.3\n",
+      "PyTorch:      1.2.0+cpu\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "original-thousand",
+   "id": "successful-yellow",
    "metadata": {},
    "source": [
     "# Pytorch-Transformer"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "plain-mining",
+   "id": "specialized-canberra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-allowance",
+   "id": "olympic-genome",
    "metadata": {},
    "source": [
     "## MultiheadAttention Layer\n",
@@ -78,13 +78,13 @@
     "\n",
     "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`\n",
     "+ 参数\n",
-    "  + `embed_dim`，\n",
+    "  + `embed_dim`，这个是所有head的总维度，分配到每个head的维度还需要除以下面的 num_heads.\n",
     "  + `num_heads`，\n",
     "  + `bias`，\n",
     "  + `add_bias_kv`\n",
     "  + `add_zero_attn`\n",
-    "  + `kdim`，key 中的特征数量\n",
-    "  + `vidm`，value 中的特征数量\n",
+    "  + `kdim`，自定义 key 中的特征维度\n",
+    "  + `vidm`，自定义 value 中的特征维度\n",
     "\n",
     "\n",
     "+ `forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
@@ -93,7 +93,8 @@
     "    + `key.shape` = $(S, N, E)$\n",
     "    + `value.shape` = $(S, N, E)$\n",
     "  \n",
-    "  其中 $E$ 是输入的 embedding 长度， $S$ 是输入序列的长度，$L$ 是输出序列的长度， $N$ 是batch size.\n",
+    "  其中 $E$ 是输入的 embedding 长度（**它必须等于参数中的`embed_dim`**）， $S$ 是**输入**序列的长度，$L$ 是**输出**序列的长度——输入和输出序列的长度可以不一样， $N$ 是batch size.\n",
+    "  \n",
     "  + `key_padding_mask`，\n",
     "  + `need_weights`，bool，表示是否需要输出attention的weights\n",
     "  + `attn_mask`，2维或者3维的mask\n",
@@ -107,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "trained-airport",
+   "id": "official-banana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "dated-assignment",
+   "execution_count": 5,
+   "id": "clean-delhi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "surprising-grove",
+   "execution_count": 6,
+   "id": "square-genealogy",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "front-leonard",
+   "id": "closing-chart",
    "metadata": {},
    "source": [
     "## Encoder Layer\n",
@@ -175,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alive-madison",
+   "id": "structural-truck",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-aruba",
+   "id": "piano-fraud",
    "metadata": {},
    "source": [
     "# 基础\n",
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "double-sally",
+   "id": "liked-asthma",
    "metadata": {},
    "source": [
     "transformer源码中，所有的模型结构都存放在 `/src/transformers/models`文件夹下，每个模型对应于一个文件夹（比如BERT对应的就是`bert`文件夹），每个模型的文件夹内，主要有如下几个`.py`文件，其中的 `xxx` 是对应模型的名称：\n",
@@ -258,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immune-transcription",
+   "id": "spanish-advocacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +269,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -282,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
