--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -6,14 +6,17 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-e43ab4bd2c97>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptim\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "package版本信息：\n",
+      "numpy:       1.19.2\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
+      "sklearn:     0.23.2\n",
+      "seaborn:     0.11.1\n",
+      "plotly:      4.14.3\n",
+      "PyTorch:      1.2.0+cpu\n"
      ]
     }
    ],
@@ -1431,6 +1434,112 @@
     "\n",
     "# 第二个是 h_n，表示各隐藏层的状态，shape=(num_layers*num_directions, batch_size, hidden_size)\n",
     "print(rnn_result[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Embedding层\n",
+    "\n",
+    "给定一个 embedding 矩阵，给定一个词语的id，从这个词典中返回对应的 embedding.\n",
+    "\n",
+    "`nn.Embedding(num_embeddings, embedding_dim, padding_idx=None, max_norm=None, norm_type=2.0, scale_grad_by_freq=False, sparse=False, _weight=None)`\n",
+    "\n",
+    "+ 初始化参数\n",
+    "  + `num_embeddings`, int – 词典的大小尺寸，比如总共出现5000个词，那就输入5000。此时index为（0-4999）\n",
+    "  + `embedding_dim`, int – 嵌入向量的维度，即用多少维来表示一个符号。\n",
+    "  + `padding_idx`, int(optional) – 填充id，比如，输入长度为100，但是每次的句子长度并不一样，后面就需要用统一的数字填充，而这里就是指定这个数字，这样，网络在遇到填充id时，就不会计算其与其它符号的相关性。（初始化为0）\n",
+    "\n",
+    "\n",
+    "+ 属性，只有如下一个属性\n",
+    "  + `.weight`, 学习到的 embedding 矩阵权重\n",
+    "\n",
+    "\n",
+    "+ `forward()`方法\n",
+    "  + 输入, 1-D tensor，指定 word 在词典中的idx\n",
+    "  + 输出, 2-D tensor，shape=`(*, H)`，$H$ 是 embedding 的维度.\n",
+    "\n",
+    "\n",
+    "+ `from_pretrained(embeddings, freeze=True, padding_idx=None, ...)`  \n",
+    "用于从一个给定的二维矩阵中创建 embedding 关系\n",
+    "  + `embedding`，2-D tensor, `shape=(num_embeddings, embedding_num)`\n",
+    "  + `freeze`\n",
+    "  + `paddign_idx`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 10\n",
+    "embedding_dim = 4\n",
+    "\n",
+    "# embedding_layer = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "# 指定用于 padding 的词的 idx 之后，对应位置的 embedding 向量就都是0\n",
+    "embedding_layer = nn.Embedding(vocab_size, embedding_dim, padding_idx = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "        [ 2.8940, -0.5823, -0.5961, -2.1171],\n",
+       "        [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
+       "        [-0.1479, -0.6522,  0.2994,  0.3771],\n",
+       "        [-0.5443,  0.8286, -0.4398,  0.8768],\n",
+       "        [-0.7140,  1.7932,  1.1160,  0.3064],\n",
+       "        [ 0.5092, -0.7065, -0.0336,  0.6674],\n",
+       "        [ 0.0946,  2.7504,  1.9101, -1.2813],\n",
+       "        [-0.4988,  0.8324, -0.8076, -1.5634],\n",
+       "        [-1.0803, -0.1018,  1.8713,  0.8305]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_layer.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
+       "         [-0.5443,  0.8286, -0.4398,  0.8768],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000]],\n",
+       "\n",
+       "        [[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "         [ 0.3246, -1.4146, -0.6347,  0.5054],\n",
+       "         [-0.5443,  0.8286, -0.4398,  0.8768],\n",
+       "         [-0.4988,  0.8324, -0.8076, -1.5634]]], grad_fn=<EmbeddingBackward>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_idx = torch.LongTensor([[0,2,4,0],[0, 2, 4, 8]])\n",
+    "embedding_layer(input_idx)"
    ]
   },
   {
@@ -4197,9 +4306,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4211,7 +4320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
