--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fitting-ottawa",
+   "execution_count": 40,
+   "id": "accompanied-morris",
    "metadata": {},
    "outputs": [
     {
@@ -12,12 +12,12 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.2.2\n",
-      "matplotlib:  3.3.4\n",
+      "pandas:      1.0.1\n",
+      "matplotlib:  3.3.1\n",
       "sklearn:     0.23.2\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.3\n",
-      "PyTorch:      1.2.0+cpu\n"
+      "plotly:      4.14.1\n",
+      "PyTorch:      1.2.0\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-radical",
+   "id": "contained-craps",
    "metadata": {},
    "source": [
     "# Pytorch-Transformer\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applicable-cedar",
+   "id": "scientific-sunset",
    "metadata": {},
    "source": [
     "## MultiheadAttention Layer\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "consecutive-market",
+   "id": "sensitive-capability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "clear-burning",
+   "id": "alone-photography",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "equivalent-element",
+   "id": "spectacular-coordinate",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hispanic-portfolio",
+   "id": "through-disease",
    "metadata": {},
    "source": [
     "## Encoder Layer\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "specific-crisis",
+   "id": "becoming-florist",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electronic-vegetable",
+   "id": "blocked-space",
    "metadata": {},
    "source": [
     "## Decoder Layer\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "american-journey",
+   "id": "simplified-training",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-thailand",
+   "id": "hispanic-chest",
    "metadata": {},
    "source": [
     "----------------------------\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unknown-interval",
+   "id": "worthy-ready",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -344,6 +344,7 @@
     "+ 所有的模型里，Tokenizer 都有两种实现：\n",
     "  1. 基于python代码的实现，对应于`PreTrainedTokenizer`类\n",
     "  2. 基于Rust Library的**快速**实现，对应于`PreTrainedTokenizerFast`类.\n",
+    "\n",
     "\n",
     "+ 上述两个类又都是基于`PreTrainedTokenizerBase`类，它们实现了如下的几个方法：\n",
     "  + 对文本进行分词，并将分词后的word映射到对应词典的id\n",
@@ -383,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "iraqi-intensity",
+   "id": "steady-brooklyn",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "detailed-aluminum",
+   "id": "distant-night",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "pressed-savage",
+   "id": "floral-wilson",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "several-extraction",
+   "id": "several-monaco",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +488,7 @@
     }
    ],
    "source": [
-    "# 多个长度不一样的句子要是用 padding，并且由 attention_mask 区分\n",
+    "# 多个长度不一样的句子要使用 padding，并且由 attention_mask 区分\n",
     "s1 = \"this is a short sentence\"\n",
     "s2 = \"This is a rather longer sequence. It is at least longer than the sequence 1\"\n",
     "\n",
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-edward",
+   "id": "alone-plumbing",
    "metadata": {},
    "source": [
     "-----------------\n",
@@ -511,7 +512,7 @@
     "\n",
     "transformer的Model基类`PreTrainedModel`有如下的一些属性或方法：\n",
     "+ `.base_model`，返回当前使用的模型，是`torch.nn.Module`类对象\n",
-    "+ `get_input_embeddings()`，返回Embedding从，也是一个`nn.Module`类对象\n",
+    "+ `get_input_embeddings()`，返回Embedding层，也是一个`nn.Module`类对象\n",
     "+ `get_output_embeddings()`，返回输出层的 embeddings。\n",
     "\n",
     "\n",
@@ -547,16 +548,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attended-cabinet",
+   "id": "naked-community",
    "metadata": {},
    "source": [
     "### BertModel\n",
     "\n",
-    "最基本的BERT架构.\n",
+    "最基本的BERT架构，输出的是最原始的BERT encoder 状态，没有添加任何多余的层.\n",
     "\n",
     "+ `forward(input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, encoder_hidden_states=None, encoder_attention_mask=None, past_key_values=None, use_cache=None, output_attentions=None, output_hidden_states=None, return_dict=None)`方法\n",
     "\n",
-    "+ `forward()`方法返回的是`BaseModelOutputWithPoolingAndCrossAttentions`类对象，它有如下属性：\n",
+    "+ `forward()`方法返回的是`BaseModelOutputWithPoolingAndCrossAttentions`类对象（在`return_dict=True`时），它有如下属性：\n",
     "  + `last_hidden_state`，shape=`(batch_size, sequence_length, hidden_size)`，最后一层的隐状态\n",
     "  + `pooler_output`，shape=`(batch_size, hidden_size)`，最后一层中 `[CLS]` token 对应的输出\n",
     "  + `hidden_states`，只有当`output_hidden_states=True`时才会返回.  \n",
@@ -564,13 +565,15 @@
     "  + `attentions`，只有当`output_attentions=True`时才会返回.  \n",
     "  返回一个 长度=12 的tuple，对应于 12 层的attention，每一层的attention.shape=`(batch_size, num_heads, sequence_length, sequence_length)`，\n",
     "  + `cross_attentions`，只有当`output_attentions=True`时才会返回.  \n",
-    "  返回一个 长度=12 的tuple，对应于 12 层的attention，每一层的attention.shape=`(batch_size, num_heads, sequence_length, sequence_length)`，"
+    "  返回一个 长度=12 的tuple，对应于 12 层的attention，每一层的attention.shape=`(batch_size, num_heads, sequence_length, sequence_length)`，\n",
+    "  \n",
+    "如果`return_dict=False`，那么返回的就是一个 tuple，其中包含的具体元素要看配置."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "recorded-calcium",
+   "execution_count": 41,
+   "id": "weird-destruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,8 +582,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "durable-superior",
+   "execution_count": 42,
+   "id": "crude-electron",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "hearing-advancement",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -624,8 +648,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "careful-hepatitis",
+   "execution_count": 45,
+   "id": "naked-thing",
    "metadata": {},
    "outputs": [
     {
@@ -661,8 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "chemical-structure",
+   "execution_count": 53,
+   "id": "dated-particle",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +695,7 @@
        "transformers.modeling_outputs.BaseModelOutputWithPoolingAndCrossAttentions"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "brief-drill",
+   "id": "precise-dollar",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "qualified-carter",
+   "id": "disabled-mainland",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "superb-intellectual",
+   "id": "parallel-genome",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "several-classification",
+   "id": "stainless-hudson",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "angry-constraint",
+   "id": "adjustable-arizona",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "original-launch",
+   "id": "quiet-trader",
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "infectious-solomon",
+   "id": "tamil-corruption",
    "metadata": {},
    "outputs": [
     {
@@ -860,9 +884,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "crucial-grocery",
+   "metadata": {},
+   "source": [
+    "+ 也可以用 切片 的方式，直接从 `outputs` 中获取前两个的值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "helpful-twins",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch.Tensor'>\n",
+      "torch.Size([2, 14, 768])\n",
+      "torch.Size([2, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# t1 对应于 last_hidden_state, t2 对应于 pooler_output\n",
+    "t1, t2 = outputs[:2]\n",
+    "print(t1.__class__)\n",
+    "print(t1.shape)\n",
+    "print(t2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "republican-smith",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "# return_dict=False，那么返回的就是一个 tuple\n",
+    "outputs = model(**sentence_encode, output_hidden_states=True, output_attentions=True, return_dict=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "willing-timing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outputs.__class__:  <class 'tuple'>\n",
+      "outputs.len:        4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"outputs.__class__: \", outputs.__class__)\n",
+    "print(\"outputs.len:       \", len(outputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "single-marks",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 14, 768])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sophisticated-small",
+   "metadata": {},
+   "source": [
+    "### BertForPreTraining\n",
+    "\n",
+    "在 BertModel 的输出后，增加了一层 BertPreTrainingHeads，"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surface-telephone",
+   "id": "proprietary-joshua",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -870,9 +989,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Tensorflow-1.15(Python3.6.12)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow1.15"
   },
   "language_info": {
    "codemirror_mode": {
@@ -884,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
