--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "accompanied-morris",
+   "execution_count": 1,
+   "id": "confused-blade",
    "metadata": {},
    "outputs": [
     {
@@ -12,12 +12,12 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.0.1\n",
-      "matplotlib:  3.3.1\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
       "sklearn:     0.23.2\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.1\n",
-      "PyTorch:      1.2.0\n"
+      "plotly:      4.14.3\n",
+      "PyTorch:      1.2.0+cpu\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contained-craps",
+   "id": "atomic-chick",
    "metadata": {},
    "source": [
     "# Pytorch-Transformer\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scientific-sunset",
+   "id": "distinguished-guarantee",
    "metadata": {},
    "source": [
     "## MultiheadAttention Layer\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sensitive-capability",
+   "id": "anonymous-madness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "alone-photography",
+   "id": "mysterious-nebraska",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "spectacular-coordinate",
+   "id": "pending-knife",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-disease",
+   "id": "tight-protein",
    "metadata": {},
    "source": [
     "## Encoder Layer\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "becoming-florist",
+   "id": "proud-briefing",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-space",
+   "id": "sustained-context",
    "metadata": {},
    "source": [
     "## Decoder Layer\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "simplified-training",
+   "id": "persistent-playing",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hispanic-chest",
+   "id": "victorian-cross",
    "metadata": {},
    "source": [
     "----------------------------\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worthy-ready",
+   "id": "sacred-civilization",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "steady-brooklyn",
+   "execution_count": 2,
+   "id": "cardiovascular-thailand",
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "distant-night",
+   "execution_count": 3,
+   "id": "phantom-trader",
    "metadata": {},
    "outputs": [
     {
@@ -427,8 +427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "floral-wilson",
+   "execution_count": 4,
+   "id": "incorporate-justice",
    "metadata": {},
    "outputs": [
     {
@@ -467,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "several-monaco",
+   "execution_count": 5,
+   "id": "activated-korean",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alone-plumbing",
+   "id": "emotional-aluminum",
    "metadata": {},
    "source": [
     "-----------------\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-community",
+   "id": "provincial-arrangement",
    "metadata": {},
    "source": [
     "### BertModel\n",
@@ -572,8 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "weird-destruction",
+   "execution_count": 6,
+   "id": "neural-pioneer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,17 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "crude-electron",
+   "execution_count": 7,
+   "id": "august-unemployment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis'"
+       "'D:\\\\Projects\\\\DataAnalysis'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "hearing-advancement",
+   "id": "dying-cartoon",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "naked-thing",
+   "id": "given-tourist",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "dated-particle",
+   "id": "spread-sense",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "precise-dollar",
+   "id": "competitive-roots",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "disabled-mainland",
+   "id": "closed-contamination",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "parallel-genome",
+   "id": "chief-essay",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "stainless-hudson",
+   "id": "rising-friendship",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "adjustable-arizona",
+   "id": "flying-stocks",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "quiet-trader",
+   "id": "rational-power",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "tamil-corruption",
+   "id": "accurate-reporter",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-grocery",
+   "id": "outer-religion",
    "metadata": {},
    "source": [
     "+ 也可以用 切片 的方式，直接从 `outputs` 中获取前两个的值"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "helpful-twins",
+   "id": "black-neutral",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "republican-smith",
+   "id": "sunrise-updating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "willing-timing",
+   "id": "prompt-subcommittee",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "single-marks",
+   "id": "colonial-affect",
    "metadata": {},
    "outputs": [
     {
@@ -970,18 +970,210 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sophisticated-small",
+   "id": "dedicated-wells",
    "metadata": {},
    "source": [
     "### BertForPreTraining\n",
     "\n",
-    "在 BertModel 的输出后，增加了一层 BertPreTrainingHeads，"
+    "在 BertModel 的输出后，增加了一层 `BertPreTrainingHeads()`，如果要自己训练一个BERT模型，从这个类出发比较方便.\n",
+    "\n",
+    "+ 通过分析源码可以发现，它（并行）做了如下两件事：\n",
+    "  1. 调用 `nn.Linear()` 将 BertModel 输出的 `[CLS]` token 映射成 2 维向量，用于表示二分类的值——用于 Next Sentence 的训练方式\n",
+    "  2. 调用 `BertLMPredictionHead()` ，将 BertModel 最后一层输出 last_hidden_state 进行处理，内部处理逻辑如下：\n",
+    "    + 调用 `BertPredictionHeadTransform()` 对 last_hidden_state 做 线性映射 + 激活函数 + LayerNormalization\n",
+    "    + 调用 `nn.Linear()` 将上一步得到的向量映射成 vocab_size 维度的向量，用于做 MaskLanguageModel 的训练\n",
+    "\n",
+    "\n",
+    "+ `forward()`方法，参数相比于 `BertModel.forward()` 多了如下两个：\n",
+    "  + `label`, shape=`(batch_size, sequence_length)`，用于计算 masked language modeling 的 Loss.   \n",
+    "  其中的取值范围应为 `[-100, 0, ..., config.vocab_size]`，也就是和 `input_ids` 一样，-100 表示对应位置的token 会被 mask.\n",
+    "  + `next_sentence_label`, shape=`(batch_size,)`，用于计算 next sequence prediction(分类问题) 的 Loss.   \n",
+    "  取值只有 `{0, 1}`\n",
+    "    + 0 表示 后一句 是连着 前一句\n",
+    "    + 1 表示 后一句 是随机抽取的\n",
+    "\n",
+    "\n",
+    "+ 返回值是一个封装的 `BertForPreTrainingOutput()` 对象（`return_dict=True`时）\n",
+    "  + `loss`，shape=`(1,)`当`labels`提供了时，保存了 MaskLM 的 Loss 和 next sentence prediction 的 Loss\n",
+    "  + `prediction_logits`，shape=`(batch_size, sequence_length, config.vocab_size)`，记录了softmax之前的score\n",
+    "  + `seq_relationship_logits`, shape=`(batch_size, 2)`，记录了 next sequence prediction 在 softmax 之前的 score\n",
+    "  + `hidden_states`，就是 `BertModel` 的 hidden_states\n",
+    "  + `attentions`，`BertModel`的对应输出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "spatial-poverty",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer, BertConfig, BertForPreTraining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cooked-style",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BertForPreTraining were not initialized from the model checkpoint at ./BERT/bert-pre-trained-models/bert-base-uncased and are newly initialized: ['cls.predictions.decoder.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "config.__class__:     <class 'transformers.models.bert.configuration_bert.BertConfig'>\n",
+      "tokenizer.__class__:  <class 'transformers.models.bert.tokenization_bert.BertTokenizer'>\n",
+      "model.__class__:      <class 'transformers.models.bert.modeling_bert.BertForPreTraining'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"./BERT/bert-pre-trained-models/bert-base-uncased\"\n",
+    "# model_name = \"./BERT/bert-pre-trained-models/distilbert-base-uncased/\"\n",
+    "\n",
+    "config = BertConfig.from_pretrained(model_name, local_files_only=True)\n",
+    "tokenizer = BertTokenizer.from_pretrained(pretrained_model_name_or_path=model_name, local_files_only=True)\n",
+    "model = BertForPreTraining.from_pretrained(model_name, local_files_only=True)\n",
+    "\n",
+    "print(\"config.__class__:    \", config.__class__)\n",
+    "print(\"tokenizer.__class__: \", tokenizer.__class__)\n",
+    "print(\"model.__class__:     \", model.__class__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "synthetic-given",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_ids': tensor([[  101,  2044, 11065,  2769,  2013,  1996,  2924, 11632,   102,     0,\n",
+      "             0,     0,     0,     0],\n",
+      "        [  101,  1996,  2924, 27307,  2001,  2464,  5645,  2006,  1996,  5900,\n",
+      "          2314,  2924,  1012,   102]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 两个句子\n",
+    "sentence = [\"After stealing money from the bank vault\", \"the bank robber was seen fishing on the Mississippi river bank.\"]\n",
+    "\n",
+    "# return_tensors 指定返回的结果为 torch.Tensor，这样就不用做转换了，\n",
+    "# 注意，必须要设置 padding，否则得到的 tensor 维度不一样，无法转成 tensors\n",
+    "sentence_encode = tokenizer(sentence, padding=True, return_tensors='pt')\n",
+    "print(sentence_encode)\n",
+    "\n",
+    "outputs = model(**sentence_encode, output_hidden_states=True, output_attentions=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "presidential-announcement",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "transformers.models.bert.modeling_bert.BertForPreTrainingOutput"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "contained-fever",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs.loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "southern-update",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 14, 30522])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.prediction_logits.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "difficult-triumph",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 2])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs.seq_relationship_logits.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "careful-bunny",
+   "metadata": {},
+   "source": [
+    "### BertForSequenceClassification\n",
+    "\n",
+    "这个类专门用于 序列分类，它的内部很简单：\n",
+    "1. `BertModel()` 输出 pooled_output(`[CLS]` token 对应的 hidden_state)\n",
+    "2. `nn.Dropout()` 处理 pooled_output\n",
+    "3. `nn.Linear()` 映射到 多分类的类别 logits\n",
+    "\n",
+    "\n",
+    "+ `forward()`方法\n",
+    "\n",
+    "+ 返回的是`SequenceClassifierOutput()`类对象"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-joshua",
+   "id": "designing-audit",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -989,9 +1181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1003,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
