--- a/ML-Action/10-text-processing.ipynb
+++ b/ML-Action/10-text-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,11 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.2.2\n",
-      "matplotlib:  3.3.4\n",
-      "sklearn:     0.23.2\n",
+      "pandas:      1.2.1\n",
+      "matplotlib:  3.3.2\n",
+      "sklearn:     0.22.1\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.3\n"
+      "plotly:      4.14.1\n"
      ]
     }
    ],
@@ -1283,12 +1283,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IMDB电影评分数据集"
+    "## IMDB电影评分数据集\n",
+    "\n",
+    "IMDB电影评分数据集解压后，文件目录结构如下所示：\n",
+    "+ aclImdb\n",
+    "  + train文件夹\n",
+    "    + pos文件夹，里面是positive的新闻数据，每一条新闻是一个txt文件\n",
+    "    + neg文件夹，negative新闻数据\n",
+    "    + unsup文件夹，无监督训练的数据\n",
+    "  + test文件夹\n",
+    "    + pos文件夹\n",
+    "    + neg文件夹\n",
+    "    \n",
+    "sklearn中，有一个函数可以读取这种结构的数据集，就是`sklearn.datasets.load_files()`方法.  \n",
+    "它能识别的文件夹格式如下, container_folder是最顶层的文件夹，category_1_folder里是属于该类的样本（名称就是文件夹名）.\n",
+    "+ container_folder/\n",
+    "  + category_1_folder/   \n",
+    "  file_1.txt file_2.txt … file_42.txt\n",
+    "  + category_2_folder/   \n",
+    "  file_43.txt file_44.txt\n",
+    "  \n",
+    "读取之后，会被转换成一个`sklearn.utils.Bunch`对象，它类似于一个dict，主要有以下几个属性：\n",
+    "+ `data`: list of str，以list形式存储的数据\n",
+    "+ `target`: ndarray，目标的labels\n",
+    "+ `target_names`: list， 类别名称\n",
+    "+ `DESCR`: str，对数据集的描述，可选\n",
+    "+ `filenames`: ndarray，数据对应的文件名\n",
+    "\n",
+    "\n",
+    "**注意，使用`load_files()`读取 IMDB 数据集之前，需要将 train 文件夹下用于无监督训练的 unsup 文件夹移除.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1334,7 @@
        "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis\\\\ML-Action'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1334,17 +1362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "imdb_train = load_files('./datasets/aclImdb/train/')\n",
-    "imdb_test = load_files('./datasets/aclImdb/test/')"
+    "#imdb_test = load_files('./datasets/aclImdb/test/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1353,13 +1381,136 @@
        "sklearn.utils.Bunch"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "imdb_train.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_train.DESCR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "25000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b\"Zero Day leads you to think, even re-think why two boys/young men would do what they did - commit mutual suicide via slaughtering their classmates. It captures what must be beyond a bizarre mode of being for two humans who have decided to withdraw from common civility in order to define their own/mutual world via coupled destruction.<br /><br />It is not a perfect movie but given what money/time the filmmaker and actors had - it is a remarkable product. In terms of explaining the motives and actions of the two young suicide/murderers it is better than 'Elephant' - in terms of being a film that gets under our 'rationalistic' skin it is a far, far better film than almost anything you are likely to see. <br /><br />Flawed but honest with a terrible honesty.\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(imdb_train.data.__class__)\n",
+    "print(len(imdb_train.data))\n",
+    "imdb_train.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['neg', 'pos']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_train.target_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(25000,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, 0, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(imdb_train.target.__class__)\n",
+    "print(imdb_train.target.shape)\n",
+    "imdb_train.target[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(25000,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['./datasets/aclImdb/train/pos\\\\11485_10.txt',\n",
+       "       './datasets/aclImdb/train/neg\\\\6802_1.txt',\n",
+       "       './datasets/aclImdb/train/pos\\\\7641_10.txt',\n",
+       "       './datasets/aclImdb/train/neg\\\\9698_1.txt',\n",
+       "       './datasets/aclImdb/train/neg\\\\3141_2.txt'], dtype='<U41')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(imdb_train.filenames.__class__)\n",
+    "print(imdb_train.filenames.shape)\n",
+    "imdb_train.filenames[:5]"
    ]
   },
   {
