IMDB数据集的BERT Fine-tune

--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "confused-blade",
+   "id": "parliamentary-principal",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atomic-chick",
+   "id": "theoretical-outside",
    "metadata": {},
    "source": [
     "# Pytorch-Transformer\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-guarantee",
+   "id": "funky-marketplace",
    "metadata": {},
    "source": [
     "## MultiheadAttention Layer\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "anonymous-madness",
+   "id": "connected-contrast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "mysterious-nebraska",
+   "id": "detected-shuttle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pending-knife",
+   "id": "geological-dairy",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tight-protein",
+   "id": "israeli-estonia",
    "metadata": {},
    "source": [
     "## Encoder Layer\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "proud-briefing",
+   "id": "hollywood-ethics",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustained-context",
+   "id": "starting-convenience",
    "metadata": {},
    "source": [
     "## Decoder Layer\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "persistent-playing",
+   "id": "forced-rouge",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-cross",
+   "id": "straight-installation",
    "metadata": {},
    "source": [
     "----------------------------\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-civilization",
+   "id": "moderate-giant",
    "metadata": {},
    "source": [
     "----------------\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cardiovascular-thailand",
+   "id": "wanted-baghdad",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "phantom-trader",
+   "id": "lyric-structure",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "incorporate-justice",
+   "id": "foster-partition",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "activated-korean",
+   "id": "binary-civilization",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emotional-aluminum",
+   "id": "governmental-aquarium",
    "metadata": {},
    "source": [
     "-----------------\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-arrangement",
+   "id": "japanese-yugoslavia",
    "metadata": {},
    "source": [
     "### BertModel\n",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "neural-pioneer",
+   "id": "restricted-insert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "august-unemployment",
+   "id": "square-disney",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dying-cartoon",
+   "id": "passive-reproduction",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "given-tourist",
+   "id": "massive-intelligence",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "spread-sense",
+   "id": "falling-scoop",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "competitive-roots",
+   "id": "empirical-arrangement",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "closed-contamination",
+   "id": "enclosed-south",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "chief-essay",
+   "id": "efficient-cabinet",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "rising-friendship",
+   "id": "large-arkansas",
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "flying-stocks",
+   "id": "peripheral-fundamental",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "rational-power",
+   "id": "russian-dairy",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "accurate-reporter",
+   "id": "surprising-acoustic",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-religion",
+   "id": "measured-equipment",
    "metadata": {},
    "source": [
     "+ 也可以用 切片 的方式，直接从 `outputs` 中获取前两个的值"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "black-neutral",
+   "id": "municipal-commission",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "sunrise-updating",
+   "id": "certain-fields",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "prompt-subcommittee",
+   "id": "bottom-things",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "colonial-affect",
+   "id": "failing-classroom",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedicated-wells",
+   "id": "adequate-advantage",
    "metadata": {},
    "source": [
     "### BertForPreTraining\n",
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "spatial-poverty",
+   "id": "amazing-vancouver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cooked-style",
+   "id": "mineral-shanghai",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "synthetic-given",
+   "id": "associate-techno",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "presidential-announcement",
+   "id": "uniform-establishment",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "contained-fever",
+   "id": "liberal-challenge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "southern-update",
+   "id": "blocked-truck",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "difficult-triumph",
+   "id": "guilty-compensation",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-bunny",
+   "id": "stone-excerpt",
    "metadata": {},
    "source": [
     "### BertForSequenceClassification\n",
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "designing-audit",
+   "id": "automotive-intelligence",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1181,9 +1181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Tensorflow-1.15(Python3.6.12)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow1.15"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1195,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
